hphp/hack/test/typecheck/refinements/inter_tconst.php.exp
File "inter_tconst.php", line 16, characters 10-11:
Invalid argument (Typing[4090])
File "inter_tconst.php", line 15, characters 13-13:
No type constant 'Ta' in B
File "inter_tconst.php", line 8, characters 7-7:
Declaration of B is here
